--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@types/faker": "^5.5.9",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "faker": "^5.5.3",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
